--- a/styles.scss
+++ b/styles.scss
@@ -36,9 +36,9 @@ section {
 header{
     //background-image: linear-gradient(to bottom, white 80%, transparent 100%);
     padding: 1em;
-    position:fixed;
+    position: fixed;
     top: 0;
-
+    z-index: 1;
 }
 
 // Article
@@ -133,26 +133,47 @@ article{
 
 // Kontakt
 
+#kontakt{
+    padding: 1.5em;
+    position: relative;  
+}
+
 #kontakt > div{
     margin-top: 10em;
 }
 
 .messages{
     margin: 1em;
+    text-transform: uppercase;
+    overflow: auto;
+
+}
+
+.messages div{
+    margin-bottom: 1em;
+}
+
+#chat{
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 70vh;
+    padding: 1em;
 }
 
 // bot
 
-#chat div:nth-child(odd){
+#chat > div:nth-child(odd) > div{
+    float: left;
     border: black solid 0.25em;
     border-radius: 1em;
-    display:inline-block;
     padding: 1em;
     line-height: 0;
     position: relative;
+    line-height: 2em;
+    max-width: 50%;
 }
 
-#chat div:nth-child(odd):before {
+#chat > div:nth-child(odd) div:before{
     content: "";
     width: 0px;
     height: 0px;
@@ -161,11 +182,11 @@ article{
     border-right: 10px solid transparent;
     border-top: 10px solid #000000;
     border-bottom: 10px solid transparent;
-    right: 22em;
-    top: 4.5em;
+    left: 1em;
+    bottom: -1.25em;
   }
 
-  #chat div:nth-child(odd):after {
+  #chat > div:nth-child(odd) div:after{
     content: "";
     width: 0px;
     height: 0px;
@@ -174,24 +195,30 @@ article{
     border-right: 7px solid transparent;
     border-top: 7px solid #fff;
     border-bottom: 7px solid transparent;
-    right: 22.2em;
-    top: 4.4em;
+    left: 1.2em;
+    bottom: -0.7em;
   }
 
 // user
 
-#chat div:nth-child(even){
-    float: right;
-    color: white;
+#chat > div:nth-child(even) div{
     background-color: black;
-    border: black solid 0.25em;
+    color: white;
+    float: right;
+
     border-radius: 1em;
     padding: 1em;
     line-height: 0;
     position: relative;
+    line-height: 2em;
+    max-width: 50%;
 }
 
-#chat div:nth-child(even):before {
+#chat div h1{
+    margin: 0;
+} 
+
+#chat > div:nth-child(even) div:before{
     content: "";
     width: 0px;
     height: 0px;
@@ -200,6 +227,47 @@ article{
     border-left: 10px solid transparent;
     border-top: 10px solid rgb(0, 0, 0);
     border-bottom: 10px solid transparent;
-    right: 3em;
-    top: 4.5em;
+    right: 1em;
+    bottom: -1em;
   }
+
+// Input
+
+#input-field{
+    position: absolute;
+    width: auto;
+}
+
+#input > *, #input{
+    display: flex;
+    font-family: text_font;
+    gap: 1em;
+}
+
+#send{
+    background-color: black;
+    
+    border-radius: 0.25em;
+    border: none;
+
+    color: white;
+    font-size: 2em;
+    padding: 0.25em;
+    text-align: center;
+    padding-top: 0.4em;
+    transition: 0.1s;
+}
+
+#send:hover{
+    background-color: #727071;
+    cursor: pointer;
+}
+
+#user-input{
+    border: 0.25em solid black;
+    border-radius: 0.25em;
+
+    font-size: 1.5em;
+    text-transform: uppercase;
+}
+
