--- a/styles.scss
+++ b/styles.scss
@@ -29,6 +29,7 @@ html, body, main, section {
 
 html{
     color: $pc5;
+    background-color: white;
 }
 
 h1{
@@ -41,6 +42,8 @@ body{
     $gap: 0.5em;
     background-size: $gap $gap;
     background-position: -19px -19px;
+
+    margin: 0.5em;
 }
 
 main{
@@ -55,14 +58,50 @@ main{
     background-color: $pc2;
 }
 
+section{
+    padding: 1em;
+}
+
 #intro{
     height: 100vh;
 
-    background: //TODO;
+    background: $pc2;
     $background-intro-size: 200%;
     background-size: $background-intro-size $background-intro-size;
 }
 
+#intro-name-cursor{
+    animation:  intro-cursor 1s steps(1, end) infinite;
+}
+
+@keyframes intro-cursor {
+    0%{
+        color: rgba(0, 0, 0, 0);
+    }
+
+    50%{
+        color: white;
+    }
+}
+
+#intro-name-title{
+    color: transparent;
+}
+
+.intro-show{
+    animation: intro-show 0.75s ease forwards;
+}
+
+@keyframes intro-show{
+    0%{
+        transform: translateX(1em);
+        color: transparent;
+    }
+
+    100%{
+        color: $pc1;
+    }
+}
 
 #intro-container{
     padding-top: 33vh;
@@ -80,8 +119,7 @@ main{
 }
 
 #intro-container h1:nth-of-type(even){
-    font-size: 3.5em;
-    color: #666666;
+    font-size: 3.75em;
 }
 
 #intro-container hr{
@@ -97,7 +135,7 @@ main{
     position: absolute;
     left: 50%;
     right: 50%;
-    bottom: 5%;
+    bottom: 0%;
 
     animation: arrow-down 2s infinite;
 }
