--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ html, body, main, section {
 }
 
 html {
-  color: #eaf3f4;
-  background-color: white;
+  color: #F9F9F9;
+  background-color: #F9F9F9;
 }
 
 h1 {
@@ -36,25 +36,20 @@ body {
 
 main {
   width: auto;
-  max-width: 100em;
   margin: auto;
   display: block;
-  box-shadow: 1em 0 1em 0 rgba(0, 0, 0, 0.2941176471), -1em 0 1em 0 rgba(0, 0, 0, 0.2941176471);
   background-color: #181818;
 }
 
-section {
-  padding: 1em;
-}
-
 #intro {
-  height: 100vh;
+  height: calc(100vh - 2em);
   background: #181818;
   background-size: 200% 200%;
 }
 
 #intro-name-cursor {
   animation: intro-cursor 1s steps(1, end) infinite;
+  position: absolute;
 }
 
 @keyframes intro-cursor {
@@ -62,7 +57,7 @@ section {
     color: rgba(0, 0, 0, 0);
   }
   50% {
-    color: white;
+    color: #F9F9F9;
   }
 }
 #intro-name-title {
@@ -83,7 +78,9 @@ section {
   }
 }
 #intro-container {
-  padding-top: 33vh;
+  position: absolute;
+  top: 35%;
+  width: 100%;
 }
 
 #intro-container h1 {
@@ -98,23 +95,32 @@ section {
 }
 
 #intro-container h1:nth-of-type(even) {
-  font-size: 3.75em;
+  font-size: 3.5em;
 }
 
 #intro-container hr {
-  border: 0.125em white solid;
+  border: 0.125em #F9F9F9 solid;
   border-radius: 1em;
   width: 55em;
 }
 
-#intro svg {
-  fill: white;
+#intro-footer-wave {
+  position: absolute !important;
+  bottom: 0;
+  right: 50;
+  left: 50;
+  width: calc(100% - 1em);
+}
+
+#intro-footer-arrow {
+  fill: #3F4346;
   height: 2.5em;
   position: absolute;
   left: 50%;
   right: 50%;
   bottom: 0%;
   animation: arrow-down 2s infinite;
+  z-index: 99;
 }
 
 @keyframes arrow-down {
@@ -127,4 +133,44 @@ section {
   100% {
     transform: translateY(0);
   }
+}
+#me {
+  background-color: #F9F9F9;
+  color: #181818;
+  padding: 5em;
+}
+
+#me h1 {
+  font-size: 5em;
+  text-align: center;
+  margin: 0;
+}
+
+#me hr {
+  border: 0.125em #181818 solid;
+  border-radius: 1em;
+}
+
+#portrait {
+  display: block;
+  margin: auto;
+  filter: blur(0.05em);
+  height: 12.33em;
+  width: 10em;
+  background-size: cover;
+  background-image: linear-gradient(to right, transparent 50%, #F9F9F9), url(/content/image/joel_ol.png);
+}
+
+#me-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#me-container div:nth-of-type(even) {
+  flex: 1;
+}
+
+#me-container div:nth-of-type(odd) {
+  flex: 1;
 }/*# sourceMappingURL=styles.css.map */
