--- a/styles.scss
+++ b/styles.scss
@@ -2,7 +2,7 @@ $pc1: #3F4346;
 $pc2: #181818;
 $pc3: #99802e;
 $pc4: #cecbbf;
-$pc5: #eaf3f4;
+$pc5: #F9F9F9;
 
 //animations
 @keyframes gradient {
@@ -29,7 +29,7 @@ html, body, main, section {
 
 html{
     color: $pc5;
-    background-color: white;
+    background-color: $pc5;
 }
 
 h1{
@@ -48,22 +48,14 @@ body{
 
 main{
     width: auto;
-    max-width: 100em;
     margin: auto;
     display: block;
-
-    $side-shadow-color: #0000004b;
-    box-shadow: 1em 0 1em 0 $side-shadow-color, -1em 0 1em 0 $side-shadow-color;
 
     background-color: $pc2;
 }
 
-section{
-    padding: 1em;
-}
-
 #intro{
-    height: 100vh;
+    height: calc(100vh - 2em);
 
     background: $pc2;
     $background-intro-size: 200%;
@@ -72,6 +64,7 @@ section{
 
 #intro-name-cursor{
     animation:  intro-cursor 1s steps(1, end) infinite;
+    position: absolute;
 }
 
 @keyframes intro-cursor {
@@ -80,7 +73,7 @@ section{
     }
 
     50%{
-        color: white;
+        color: $pc5;
     }
 }
 
@@ -104,7 +97,10 @@ section{
 }
 
 #intro-container{
-    padding-top: 33vh;
+    position: absolute;
+    top: 35%;
+
+    width: 100%;
 }
 
 #intro-container h1{
@@ -119,17 +115,27 @@ section{
 }
 
 #intro-container h1:nth-of-type(even){
-    font-size: 3.75em;
+    font-size: 3.5em;
 }
 
 #intro-container hr{
-    border: 0.125em white solid;
+    border: 0.125em $pc5 solid;
     border-radius: 1em;
     width: 55em;
 }
 
-#intro svg{
-    fill: white;
+#intro-footer-wave{
+    position: absolute !important;
+    bottom: 0;
+    right: 50;
+    left: 50;
+
+
+    width: calc(100% - 1em);
+}
+
+#intro-footer-arrow{
+    fill: $pc1;
     height: 2.5em;
 
     position: absolute;
@@ -138,6 +144,8 @@ section{
     bottom: 0%;
 
     animation: arrow-down 2s infinite;
+
+    z-index: 99;
 }
 
 @keyframes arrow-down{
@@ -152,4 +160,50 @@ section{
     100%{
         transform: translateY(0);
     }
+}
+
+// me
+
+#me{
+    background-color: $pc5;
+    color: $pc2;
+    padding: 5em;
+}
+
+#me h1{
+    font-size: 5em;
+    text-align: center;
+    margin: 0;
+}
+
+#me hr{
+    border: 0.125em $pc2 solid;
+    border-radius: 1em;
+}
+
+#portrait{
+    display: block;
+    margin: auto;
+    filter: blur(0.05em);
+
+    $portrait-size: 10em;
+    height: calc($portrait-size * 1.233);
+    width: $portrait-size;
+    background-size: cover;
+    background-image:   linear-gradient(to right ,transparent 50%, $pc5),
+                        url(/content/image/joel_ol.png);
+}
+
+#me-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#me-container div:nth-of-type(even){
+    flex: 1;
+}
+
+#me-container div:nth-of-type(odd){
+    flex: 1;
 }
