--- a/styles.scss
+++ b/styles.scss
@@ -83,17 +83,24 @@ main{
     color: transparent;
 }
 
-.intro-show{
-    animation: intro-show 0.75s ease forwards;
+.show{
+    animation: show 0.75s ease forwards;
 }
 
-@keyframes intro-show{
+.reveal{
+    opacity: 0;
+    transition: 1s;
+}
+
+@keyframes show{
     0%{
         transform: translateX(1em);
+        opacity: 0;
         color: transparent;
     }
 
     100%{
+        opacity: 1;
         color: $pc1;
     }
 }
@@ -170,7 +177,7 @@ main{
     background-color: $pc5;
     color: $pc2;
     padding: 5em;
-    height: calc(100vh - 10em);
+    height: calc(100vh - 7.5em);
 }
 
 #me h1{
@@ -189,10 +196,11 @@ main{
     margin: auto;
     filter: blur(0.05em);
 
-    $portrait-size: 40em;
+    $portrait-size: 40rem;
     height: calc($portrait-size * 1.233);
     width: $portrait-size;
     background-size: cover;
+    background-position: center;
     background-image:   linear-gradient(to right ,transparent 50%, $pc5),
                         url(/content/image/joel_ol.png);
 }
@@ -203,10 +211,12 @@ main{
     align-items: center;
 }
 
-#me-container div:nth-of-type(even){
+#me-container > div:nth-of-type(even){
     flex: 1;
+
 }
 
-#me-container div:nth-of-type(odd){
-    flex: 1;
+#me-container > div:nth-of-type(odd){
+    flex: 3;
+    padding: 5em;
 }
