--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
   }
 }
 @font-face {
-  font-family: title-font;
+  font-family: default-font;
   src: url(/content/font/Louis\ George\ Cafe\ Light.ttf);
 }
 html, body, main, section {
@@ -21,10 +21,7 @@ html {
   color: #F9F9F9;
   background-color: #F9F9F9;
   overflow-x: hidden;
-}
-
-h1 {
-  font-family: title-font;
+  font-family: default-font;
 }
 
 body {
@@ -40,6 +37,26 @@ main {
   margin: auto;
   display: block;
   background-color: #181818;
+}
+
+h1 {
+  font-size: 4em;
+  margin: 0;
+}
+
+h2 {
+  font-size: 3em;
+  margin: 0;
+}
+
+h3 {
+  font-size: 2em;
+  margin: 0;
+}
+
+p {
+  font-size: 1.5em;
+  margin: 0;
 }
 
 #intro {
@@ -92,7 +109,6 @@ main {
 }
 
 #intro-container h1 {
-  font-size: 4em;
   margin: 0;
   text-align: center;
 }
@@ -107,7 +123,7 @@ main {
 }
 
 #intro-container hr {
-  border: 0.125em #F9F9F9 solid;
+  border: 0.15em #F9F9F9 solid;
   border-radius: 1em;
   width: 55em;
 }
@@ -115,8 +131,6 @@ main {
 #intro-footer-wave {
   position: absolute !important;
   bottom: 0;
-  right: 50;
-  left: 50;
   width: calc(100% - 1em);
 }
 
@@ -145,30 +159,18 @@ main {
 #me {
   background-color: #F9F9F9;
   color: #181818;
-  padding: 5em;
-  height: calc(100vh - 7.5em);
+  padding-left: 5em;
+  padding-right: 5em;
 }
 
-#me h1 {
+#me p {
   font-size: 5em;
   text-align: center;
   margin: 0;
 }
 
-#me hr {
-  border: 0.125em #181818 solid;
-  border-radius: 1em;
-}
-
 #portrait {
-  display: block;
-  margin: auto;
-  filter: blur(0.05em);
-  height: 49.32rem;
-  width: 40rem;
-  background-size: cover;
-  background-position: center;
-  background-image: linear-gradient(to right, transparent 50%, #F9F9F9), url(/content/image/joel_ol.png);
+  width: 100%;
 }
 
 #me-container {
@@ -178,10 +180,45 @@ main {
 }
 
 #me-container > div:nth-of-type(even) {
-  flex: 1;
+  flex: 2;
 }
 
 #me-container > div:nth-of-type(odd) {
   flex: 3;
+  padding-right: 5em;
+  padding-right: 5em;
+}
+
+#more-me hr {
+  border: 0.15em solid #F9F9F9;
+}
+
+#more-me {
+  position: relative;
+}
+
+#more-me-container {
   padding: 5em;
+  padding-top: 10em;
+}
+
+#more-me-wave {
+  position: absolute !important;
+  top: 0%;
+  left: 50;
+  right: 50;
+}
+
+.more-me-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 2em;
+}
+
+.more-me-personal-item h2 {
+  padding-bottom: 5em;
+}
+
+.more-me-personal-item p {
+  font-size: 1.75em;
 }/*# sourceMappingURL=styles.css.map */
