--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,7 @@
 $pc1: #3F4346;
-$pc2: #181818;
-$pc3: #99802e;
-$pc4: #cecbbf;
+$pc2: #202020;
+$pc3: #5c0068;
+$pc4: #0048ac;
 $pc5: #F9F9F9;
 
 //animations
@@ -119,7 +119,6 @@ p{
 
     100%{
         opacity: 1;
-        color: $pc1;
     }
 }
 
@@ -155,6 +154,7 @@ p{
     bottom: 0;
 
     width: calc(100% - 1em);
+    fill: $pc5;
 }
 
 #intro-footer-arrow{
@@ -226,7 +226,7 @@ p{
 // more me
 
 #more-me hr{
-    border: 0.15em solid $pc5;
+    border: 0.1em solid $pc5;
 }
 
 #more-me{
@@ -236,6 +236,7 @@ p{
 #more-me-container{
     padding: 5em;
     padding-top: 10em;
+    padding-bottom: 10em;
 }
 
 #more-me-wave{
@@ -249,13 +250,29 @@ p{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
-    padding: 2em;
+    padding: 3em;
+    padding-top: 0;
+
+    gap: 2.5em;
+
+    margin-bottom: 1em;
 }
 
-.more-me-personal-item h2{
+.experience{
+    grid-template-columns: repeat(2, 1fr);   
+}
+
+.more-me-item h2{
     padding-bottom: 5em;
 }
 
-.more-me-personal-item p{
+.more-me-item p{
     font-size: 1.75em;
+}
+
+#me-footer-wave{
+    fill: $pc5;
+
+    position: absolute !important;
+    bottom: 0;
 }
